added the invoices api with swagger
